@@ -1059,6 +1059,9 @@ int run_docker(const char *command_file) {
   snprintf(docker_command_with_binary, PATH_MAX, "%s %s", docker_binary, docker_command);
   char **args = extract_values_delim(docker_command_with_binary, " ");
 
+  //clean up command file before we exec
+  unlink(command_file);
+
   int exit_code = -1;
   if (execvp(docker_binary, args) != 0) {
     fprintf(ERRORFILE, "Couldn't execute the container launch with args %s - %s",
@@ -1355,6 +1358,9 @@ int launch_docker_container_as_user(const char * user, const char *app_id,
   }
 
 cleanup:
+  //clean up docker command file
+  unlink(command_file);
+
   if (exit_code_file != NULL && write_exit_code_file(exit_code_file, exit_code) < 0) {
     fprintf (ERRORFILE,
       "Could not write exit code to file %s.\n", exit_code_file);
