@@ -469,6 +469,9 @@ Release 2.7.3 - UNRELEASED
     YARN-5055. max apps per user can be larger than max per queue (Eric Badger
     via jlowe)
 
+    YARN-4255. container-executor does not clean up docker operation command files.
+    (Sidharta Seethana via vvasudev)
+
 Release 2.7.2 - 2016-01-25
 
   INCOMPATIBLE CHANGES
